# tpproj3

./: .gitignore  CMakeLists.txt  README.md  Raport.ipynb  python.py
source/module/: module.cpp
visual/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  VSGenerate.bat  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pybind11module.vcxproj  pybind11module.vcxproj.filters  tp3.sln
visual/Debug/: pybind11module.exp  pybind11module.lib
visual/pybind11module.dir/Debug/: pybind11module.cp312-win_amd64.pyd.recipe
visual/pybind11module.dir/Debug/pybind11module.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
visual/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
visual/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
